--- a/views/admin-lte/cm-admin/header.ejs
+++ b/views/admin-lte/cm-admin/header.ejs
@@ -14,6 +14,7 @@
     <link href="/admin-lte/css/AdminLTE.min.css" rel="stylesheet" type="text/css" />
     <link href="/admin-lte/css/skin-blue.min.css" rel="stylesheet" type="text/css" />
     <link href="/admin-lte/css/app.css" rel="stylesheet" type="text/css" />
+    <link href="/admin-lte/css/admin.css" rel="stylesheet" type="text/css" />
 
     <!-- Extras -->
     <link href="/datatables/dataTables.bootstrap.css" rel="stylesheet" type="text/css" />
