small annotation-zone directive changes

--- a/frontend-modules/angular/views/nodeDetail/pdf-annotation-zone.html
+++ b/frontend-modules/angular/views/nodeDetail/pdf-annotation-zone.html
@@ -1,4 +1,6 @@
 TEST
-<div movable="" data-tagName={{tagName}} can-move={{canMove}} ng-hide="(switchShowAnnoZones == 'Off')" id={{annZoneName}} position="absolute" opacity={{opacityFactorHighlight}}>
-  TEST1
+<div movable="" can-move={{canMove}} ng-hide="(switchShowAnnoZones == 'Off')" id={{annZoneID}} class="slideRect1" position="absolute" opacity={{opacityFactorHighlight}} data-tagName={{tagName}} data-relstartcoord="{{dataRelCoord}}" style="position:absolute;background-color:{{color}};'transition': 'background 0.1s linear'">
+  <div id ="{{caRectId}}" class="caRect" style= "width:'100%';height:'100%'">
+    TEST1
+  </div>
 </div>
