--- a/public/angular/views/pdf-annotation-zone.html
+++ b/public/angular/views/pdf-annotation-zone.html
@@ -1,5 +1,4 @@
-TEST
-<div movable="" can-move={{canMove}} ng-hide="(switchShowAnnoZones == 'Off')" id={{annZoneID}} class="slideRect1" position="absolute" opacity={{opacityFactorHighlight}} data-tagName={{tagName}} data-relstartcoord="{{dataRelCoord}}" style="position:absolute;background-color:{{color}};'transition': 'background 0.1s linear'">
+<div movable-pdf="" can-move={{canMove}} ng-hide="(switchShowAnnoZones == 'Off')" id={{annZoneID}} class="slideRect1" position="absolute" opacity={{opacityFactorHighlight}} data-tagName={{tagName}} data-relstartcoord="{{dataRelCoord}}" style="position:absolute;background-color:{{color}};'transition': 'background 0.1s linear'">
   <div id ="{{caRectId}}" class="caRect" style= "width:'100%';height:'100%'">
     TEST1
   </div>
