--- a/public/angular/views/pdf-annotation-zone.html
+++ b/public/angular/views/pdf-annotation-zone.html
@@ -1,6 +1,6 @@
 <div movable-pdf="" can-move={{canMove}} ng-hide="(switchShowAnnoZones == 'Off')" id={{annZoneID}} class="slideRect1" position="absolute" opacity={{opacityFactorHighlight}} data-tagName={{tagName}} data-relstartcoord="{{dataRelCoord}}" style="position:absolute;background-color:{{color}};'transition': 'background 0.1s linear'">
   <div id ="{{caRectId}}" class="caRect" style= "width:'100%';height:'100%'" ng-click="addReference(annZoneID)">
-    <select simplecolorpicker>
+    <select id="{{colorPickerId}}" name="colorpicker-change-background-color" class="slideRectColorPicker" value= "#ac725e">
       <option value="#ac725e">#ac725e</option>
       <option value="#d06b64">#d06b64</option>
       <option value="#f83a22">#f83a22</option>
@@ -26,6 +26,14 @@
       <option value="#cd74e6">#cd74e6</option>
       <option value="#a47ae2">#a47ae2</option>
     </select>
+    <script>
+    $('select[name="colorpicker-change-background-color"]').simplecolorpicker({picker: true, theme: 'glyphicons'});
+    $('#destroy').on('click', function() {
+      $('select').simplecolorpicker('destroy');
+    });
+    // By default, activate simplecolorpicker plugin on HTML selects
+    $('#init').trigger('click');
+    </script>
       TEST1
   </div>
 </div>
