Fixed resizing bug

--- a/views/admin-lte/treeNode/pdf/pdf.ejs
+++ b/views/admin-lte/treeNode/pdf/pdf.ejs
@@ -15,6 +15,15 @@
                     <!--<div movable style="background-color:yellow;height:100px;width:100px;" ></div>-->
                 </div>
 
+
+                <!--TODO:ANGANNZONE
+                <div id="annotationZone" ng-controller="AnnotationZoneListController">
+                      <pdf-annotation-zone  ng-repeat="annotationZone in annotationZoneList">
+                      </pdf-annotation-zone>
+                </div>
+                -->
+
+
             </div>
         </div>
         <div class="posts-list col-sm-4 col-md-4">
