--- a/public/angular/views/pdf-annotation-zone.html
+++ b/public/angular/views/pdf-annotation-zone.html
@@ -1,55 +1,7 @@
 <div movable-pdf="" can-move={{canMove}} ng-hide="(switchShowAnnoZones == 'Off')" id={{annZoneID}} class="slideRect1" position="absolute" opacity={{opacityFactorHighlight}} data-tagName={{tagName}} data-relstartcoord="{{dataRelCoord}}" style="position:absolute;background-color:{{color}};'transition': 'background 0.1s linear'">
-  <div id ="{{caRectId}}" class="caRect" style= "width:'100%';height:'100%'" ng-click="addReference(annZoneID)">
-    <select id="{{colorPickerId}}" name="colorpicker-change-background-color" class="slideRectColorPicker" value= "#ac725e">
-      <option value="#ac725e">#ac725e</option>
-      <option value="#d06b64">#d06b64</option>
-      <option value="#f83a22">#f83a22</option>
-      <option value="#fa573c">#fa573c</option>
-      <option value="#ff7537">#ff7537</option>
-      <option value="#ffad46">#ffad46</option>
-      <option value="#42d692">#42d692</option>
-      <option value="#16a765">#16a765</option>
-      <option value="#7bd148">#7bd148</option>
-      <option value="#b3dc6c">#b3dc6c</option>
-      <option value="#fbe983">#fbe983</option>
-      <option value="#fad165">#fad165</option>
-      <option value="#92e1c0">#92e1c0</option>
-      <option value="#9fe1e7">#9fe1e7</option>
-      <option value="#9fc6e7">#9fc6e7</option>
-      <option value="#4986e7">#4986e7</option>
-      <option value="#9a9cff">#9a9cff</option>
-      <option value="#b99aff">#b99aff</option>
-      <option value="#c2c2c2">#c2c2c2</option>
-      <option value="#cabdbf">#cabdbf</option>
-      <option value="#cca6ac">#cca6ac</option>
-      <option value="#f691b2">#f691b2</option>
-      <option value="#cd74e6">#cd74e6</option>
-      <option value="#a47ae2">#a47ae2</option>
-    </select>
-    <div id="{{slideRectWrapperLoad}}" class="slideRectWrapper" style="padding-bottom:1px;padding-top:1px">
-      <span id="{{slideRectSpanLoadId}}" class="slideRectSpan" style="margin-right:'2pt'">
-        <span>#</span><span ng-hide="(editZoneMode == '{{annZoneId}}')">{{tagName}}</span>
-      </span>
-    </div>
-    <div id="{{slideRectWrapperEdit}}" class="slideRectWrapper" style="padding-bottom:1px;padding-top:1px">
-      <span id="{{slideRectSpanEditId}}" class="slideRectSpan" style="margin-right:'2pt'">
-        <span>#</span><span ng-hide="(editZoneMode == '{{annZoneId}}')">{{tagName}}</span>
-        <input type="text" id="{{rectEditInputField}}" name = "{{rectEditInputFieldName}}" class="slideRectInput" style="color:black;transition:'width 0.25s'; border:'0'" ng-model="editZoneValues['{{id}}'].name" ng-hide="(editZoneMode != '{{id}}')">
-        </input>
-      </span>
-      <span id="editSpan-{{divCounter}}" class="glyphicon glyphicon-pencil" aria-hidden="true" ng-click="setEditZoneModesetEditZoneMode('{{annZoneId}}',{{divCounter}},'{{color}}')" ng-hide="(editZoneMode == '{{annZoneId}}')" style="float:'right';color:'white';margin:'2px';cursor:'pointer'"/>
-      <span id="cancelSaveSpan-{{divCounter}}" class="glyphicon glyphicon-floppy-remove" aria-hidden="true" ng-click="resetEditZoneMode()"
-      ng-hide="(editZoneMode != '{{annZoneId}}')" style="float:'right';color:'white';margin:'2px';cursor:'pointer'"/>
-      <span id="saveSpan-{{divCounter}}" class="glyphicon glyphicon-floppy-saved" aria-hidden="true" ng-click="updateAnnZone('{{annZoneId}}')"
-      ng-hide="(editZoneMode != '{{annZoneId}}')" style="float:'right';color:'white';margin:'2px';cursor:'pointer'"/>
-    </div>
-    <div id="{{slideRectWrapperCreate}}" class="slideRectWrapper" style="padding-bottom:1px;padding-top:1px;'margin-left':'-20px'">
-      <span id="{{slideRectSpanCreateId}}" class="slideRectSpan" style="margin-right:'2pt'">
-        <span>#
-          <input type="text" id="rectInputField-{{divCounter}}" class="slideRectInput" ng-model="tagNameList['rect-{{divCounter}}']" style="color:'black';transition:'width 0-25s';border:'0'"/>
-        </span>
-      </span>
-      <select id="{{colorPickerId}}" name="colorpicker-change-background-color" class="slideRectColorPicker" value= "#ac725e">
+  <div id ="caRect-{{divCounter}}" class="caRect" style= "width:'100%';height:'100%'" ng-click="addReference(annZoneID)">
+    <div>
+      <select id="colorPicker-{{divCounter}}" name="colorpicker-change-background-color" class="slideRectColorPicker" value= "#ac725e">
         <option value="#ac725e">#ac725e</option>
         <option value="#d06b64">#d06b64</option>
         <option value="#f83a22">#f83a22</option>
@@ -75,6 +27,59 @@
         <option value="#cd74e6">#cd74e6</option>
         <option value="#a47ae2">#a47ae2</option>
       </select>
+    </div>
+    <div id="slideRectWrapper-{{divCounter}}" class="slideRectWrapper" style="padding-bottom:'1px'; padding-top:'1px';">
+      <span id="slideRectSpan-{{divCounter}}" class="slideRectSpan" style="margin-right:'2pt';">
+        <span>#</span>
+        <span ng-hide="(editZoneMode == annZoneId)">{{tagName}}</span>
+      </span>
+    </div>
+    <div id="slideRectEditWrapper-{{divCounter}}" class="slideRectWrapper" style="padding-bottom:1px;padding-top:1px">
+      <span id="slideRectEditSpan-{{divCounter}}" class="slideRectSpan" style="margin-right:'2pt'">
+        <span>#</span><span ng-hide="(editZoneMode == annZoneId)">{{tagName}}</span>
+        <input type="text" id="rectEditInputField-{{divCounter}}" name = "{{rectEditInputFieldName}}" class="slideRectInput" style="color:black;transition:'width 0.25s'; border:'0'" ng-model="editZoneValues['{{id}}'].name" ng-hide="(editZoneMode != '{{id}}')">
+        </input>
+      </span>
+      <span id="editSpan-{{divCounter}}" class="glyphicon glyphicon-pencil" aria-hidden="true" ng-click="setEditZoneMode(annZoneId,divCounter,color);" ng-hide="(editZoneMode == '{{annZoneId}}')" style="float:'right';color:'white';margin:'2px';cursor:'pointer'"/>
+      <span id="cancelSaveSpan-{{divCounter}}" class="glyphicon glyphicon-floppy-remove" aria-hidden="true" ng-click="resetEditZoneMode()"
+      ng-hide="(editZoneMode != '{{annZoneId}}')" style="float:'right';color:'white';margin:'2px';cursor:'pointer'"/>
+      <span id="saveSpan-{{divCounter}}" class="glyphicon glyphicon-floppy-saved" aria-hidden="true" ng-click="updateAnnZone('{{annZoneId}}')"
+      ng-hide="(editZoneMode != '{{annZoneId}}')" style="float:'right';color:'white';margin:'2px';cursor:'pointer'"/>
+    </div>
+    <div id="slideRectCreateWrapper-{{divCounter}}" class="slideRectWrapper" style="padding-bottom:1px;padding-top:1px;'margin-left':'-20px'">
+      <span id="slideRectCreateSpan-{{divCounter}}" class="slideRectSpan" style="margin-right:'2pt'">
+        <span>#
+          <input type="text" id="rectInputField-{{divCounter}}" class="slideRectInput" ng-model="tagNameList['rect-{{divCounter}}']" style="color:'black';transition:'width 0-25s';border:'0'"/>
+        </span>
+      </span>
+      <div>
+        <select id="colorPickerEdit-{{divCounter}}" name="colorpicker-change-background-color" class="slideRectColorPicker" value= "#ac725e">
+          <option value="#ac725e">#ac725e</option>
+          <option value="#d06b64">#d06b64</option>
+          <option value="#f83a22">#f83a22</option>
+          <option value="#fa573c">#fa573c</option>
+          <option value="#ff7537">#ff7537</option>
+          <option value="#ffad46">#ffad46</option>
+          <option value="#42d692">#42d692</option>
+          <option value="#16a765">#16a765</option>
+          <option value="#7bd148">#7bd148</option>
+          <option value="#b3dc6c">#b3dc6c</option>
+          <option value="#fbe983">#fbe983</option>
+          <option value="#fad165">#fad165</option>
+          <option value="#92e1c0">#92e1c0</option>
+          <option value="#9fe1e7">#9fe1e7</option>
+          <option value="#9fc6e7">#9fc6e7</option>
+          <option value="#4986e7">#4986e7</option>
+          <option value="#9a9cff">#9a9cff</option>
+          <option value="#b99aff">#b99aff</option>
+          <option value="#c2c2c2">#c2c2c2</option>
+          <option value="#cabdbf">#cabdbf</option>
+          <option value="#cca6ac">#cca6ac</option>
+          <option value="#f691b2">#f691b2</option>
+          <option value="#cd74e6">#cd74e6</option>
+          <option value="#a47ae2">#a47ae2</option>
+        </select>
+      </div>
       <span id="rectspan-{{divCounter}}" class='slideRectSpan' style="'margin-right':'2pt'">
       <span id="validationIcon-{{divCounter}}" class="validationIcon" aria-hidden="true" style="color:'white'"></span>
       <button class ="btn btn-white btn-link" ng-click="removeAnnotationZone('rect-{{divCounter}}')" style="float:right">X</button>
