Add max-height to newsfeed container in treeNode tab and course tab

--- a/views/admin-lte/course/newsfeedUpdate/newsfeedUpdate.ejs
+++ b/views/admin-lte/course/newsfeedUpdate/newsfeedUpdate.ejs
@@ -1,6 +1,6 @@
 <div ng-controller="NewsfeedController">
     <div class="row">
-        <div class="col-md-8" id="newsfeedList">
+        <div class="col-md-8" id="newsfeedList" style="max-height: 500px; overflow: auto">
 
             <table class="table table-striped">
                 <tbody>
