--- a/views/admin-lte/treeNode/nodeNewsFeedUpdate/nodeNewsFeedUpdate.ejs
+++ b/views/admin-lte/treeNode/nodeNewsFeedUpdate/nodeNewsFeedUpdate.ejs
@@ -1,8 +1,8 @@
 <div ng-controller="NewsfeedController">
     <div class="row">
-        <div class="col-md-8" id="newsfeedList">
+        <div class="col-md-8" id="newsfeedList" style="max-height: 500px; overflow: auto">
 
-            <table class="table table-striped">
+            <table class="table table-striped" >
                 <tbody>
                 <tr>
                     <th style="width:10px;">Nr.</th>
