--- a/views/admin-lte/jsfooter.ejs
+++ b/views/admin-lte/jsfooter.ejs
@@ -2,7 +2,12 @@
 <script src="/jquery/jquery.min.js"></script>
 <script src="/jquery/jquery-ui.min.js"></script>
 <script src="/jquery/jquery.ui.touch-punch.min.js"></script>
-<script src="/jquery/jquery.jsPlumb-1.7.5.js"></script>
+<script src="/jquery/jsPlumb-1.7.10.js"></script>
+
+<script src="/jquery/jquery.simulate.js"></script>
+<script src="/jquery/jquery.simulate.ext.js"></script>
+<script src="/jquery/jquery.simulate.drag-n-drop.js"></script>
+
 <script src="/lodash/lodash.min.js"></script>
 <script src="/bootstrap/js/bootstrap.min.js" type="text/javascript"></script>
 <script src="/bootstrap/js/bootstrap-hover-dropdown.min.js" type="text/javascript"></script>
