--- a/public/admin-lte/css/app.css
+++ b/public/admin-lte/css/app.css
@@ -563,6 +563,7 @@ ul.dropdown-menu.course{
     position: relative;
     left: 20px;
     z-index: 4;
+    display: table-cell;
 }
 .videoPlayerWrapper{
     position: fixed;
