--- a/views/admin-lte/treeNode/nodeAnalytics/nodeAnalytics.ejs
+++ b/views/admin-lte/treeNode/nodeAnalytics/nodeAnalytics.ejs
@@ -14,7 +14,7 @@
          data-gs-width="12"
          data-gs-locked="yes"
          data-gs-no-resize="yes"
-         ng-repeat="wdg in widgets" id="w{{wdg.widgetId._id}}">
+         ng-repeat="wdg in widgets" id="w{{wdg._id}}">
         <div class="grid-stack-item-content">
 
             <div class="box no-shadow">
@@ -24,7 +24,7 @@
                     <div class="box-tools pull-right">
                         <button class="btn btn-box-tool" data-widget="remove"
                                 data-toggle="tooltip" title="Remove"
-                                ng-click="closeWidget(wdg.widgetId._id);"
+                                ng-click="closeWidget(wdg._id);"
                                 >
                             <i class="fa fa-times"></i></button>
                     </div>
@@ -33,7 +33,7 @@
 
                     <!-- start widget render -->
                     <div ng-include src="wdg.widgetId.entryPoint"
-                         onload="initWidgetButton(wdg.widgetId._id)">
+                         onload="initWidgetButton(wdg._id)">
                     </div>
                     <!-- start widget render -->
 
