--- a/views/admin-lte/course/preview/preview.ejs
+++ b/views/admin-lte/course/preview/preview.ejs
@@ -83,7 +83,7 @@
         <div class="grid-stack-item"
              data-gs-locked="yes"
              data-gs-no-resize="yes"
-             ng-repeat="wdg in widgets" id="w{{wdg.widgetId._id}}">
+             ng-repeat="wdg in widgets" id="w{{wdg._id}}">
 
             <div class="grid-stack-item-content">
                 <div class="box no-shadow">
@@ -101,7 +101,7 @@
                     <div class="box-body-widget">
 
                         <div ng-include src="wdg.widgetId.entryPoint"
-                             onload="initWidgetButton(wdg.widgetId._id)">
+                             onload="initWidgetButton(wdg._id)">
                         </div>
 
                     </div>
