fixed link action bar permission

--- a/views/admin-lte/treeNode/nodeAnalytics/nodeAnalyticsActionBar.ejs
+++ b/views/admin-lte/treeNode/nodeAnalytics/nodeAnalyticsActionBar.ejs
@@ -1,5 +1,5 @@
 <ul class="">
-    <li>
+    <li ng-show="isAdmin || isOwner || isManager || isNodeOwner">
         <a style="cursor: pointer;"
            data-toggle="modal" data-target="#widgetGalleryNodeAnalytics"
            title="Add or remove preview widgets">
