--- a/views/admin-lte/treeNode/nodeNewsFeedUpdate/nodeNewsFeedUpdate.ejs
+++ b/views/admin-lte/treeNode/nodeNewsFeedUpdate/nodeNewsFeedUpdate.ejs
@@ -5,12 +5,10 @@
             <table class="table table-striped" >
                 <tbody>
                 <tr>
-                    <th style="width:10px;">Nr.</th>
                     <th>Newsfeed Activity</th>
                 </tr>
                 <tr ng-repeat="nfData in newsfeedData | orderBy: '-dateAdded'">
-                    <td>{{$index+1}}.</td>
-                    <td>{{nfData.userId.displayName}} {{nfData.actionType}} a {{nfData.actionSubject}} {{nfData.dateAdded | relativeDate}}</td>
+                    <td><b>{{nfData.userId.displayName}}</b> {{nfData.actionType}} a {{nfData.actionSubject}}<span ng-show="'{{nfData.actionType}}' == 'added'"> in </span> <b>{{nfData.actionName}}</b> -- <i>{{nfData.dateAdded | relativeDate}}</i></td>
                 </tr>
                 </tbody>
             </table>
