--- a/public/admin-lte/css/app.css
+++ b/public/admin-lte/css/app.css
@@ -373,7 +373,7 @@ li.disabled i {
     font-weight: 500;
 }
 
-.w.contentNode{
+.w.contentNode {
     border-radius: 0;
     padding: 8px;
     text-align: left;
@@ -381,44 +381,48 @@ li.disabled i {
     max-width: 200px;
     min-width: 160px;
 }
-.w.contentNode span i{
+
+.w.contentNode span i {
     font-size: 20px;
     margin-right: 5px;
 }
-.w.subTopic{
+
+.w.subTopic {
     border-radius: 24px;
     max-width: 180px;
     min-width: 160px;
     height: auto;
     z-index: 1;
 }
-.w.contentNode .contentNode-analytics i{
+
+.w.contentNode .contentNode-analytics i {
     margin-left: 7px;
     margin-right: 0px;
     font-size: 10px;
 }
 
-.center-course{
+.center-course {
     background-color: #3C8DBC;
-    color:white;
+    color: white;
     min-width: 160px;
     border-bottom: 2px solid #3C8DBC;
 }
 
-.dropdown-course{
-    width:100%;
-    font-size:13px;
+.dropdown-course {
+    width: 100%;
+    font-size: 13px;
     border: 1px solid #e3e3e3;
-    color:#333;
-    margin-top: 1px!important;
+    color: #333;
+    margin-top: 1px !important;
 }
 
-.dropdown-course li.separator{
+.dropdown-course li.separator {
     width: 100%;
     margin: 0px;
     height: 4px;
     background: #e1e3e9;
 }
+
 .center-category {
     width: 160px !important;
     height: 200px !important;
@@ -441,26 +445,29 @@ li.disabled i {
     min-width: 160px;
     height: auto;
 }
+
 [data-shape=Ellipse] {
     max-width: 200px;
     min-width: 120px;
 }
-.w.subTopic.deleted{
+
+.w.subTopic.deleted {
     width: 20px;
     min-width: 20px;
-    height:20px;
-    min-height:20px;
+    height: 20px;
+    min-height: 20px;
     -moz-border-radius: 50%;
     -webkit-border-radius: 50%;
     border-radius: 50%;
-    background-color:#3C8DBC ;
-    padding:0px;
+    background-color: #3C8DBC;
+    padding: 0px;
     /*text-indent: 100%;
     overflow: hidden;*/
     white-space: nowrap;
-    z-index:0;
-    color:transparent;
+    z-index: 0;
+    color: transparent;
 }
+
 .box.box-primary.dropdown-menu {
     width: auto;
     position: absolute;
@@ -476,7 +483,7 @@ li.disabled i {
 }
 
 ul.dropdown-menu.category,
-ul.dropdown-menu.course{
+ul.dropdown-menu.course {
     z-index: 10;
 }
 
@@ -531,9 +538,9 @@ ul.dropdown-menu.course{
     background-color: #ecf0f5;
 }
 
-#courseTabs .tree-container{
+#courseTabs .tree-container {
     left: 80px;
-    top:7px;
+    top: 7px;
 }
 
 @media (max-width: 991px) {
@@ -541,13 +548,13 @@ ul.dropdown-menu.course{
         left: 5px !important;
     }
 
-    .action-header .navbar-custom-menu{
-        float: none!important;
+    .action-header .navbar-custom-menu {
+        float: none !important;
         text-align: left;
         margin-top: 10px;
     }
 
-    .action-header .navbar-custom-menu > ul{
+    .action-header .navbar-custom-menu > ul {
         padding: 0px;
     }
 }
@@ -565,17 +572,18 @@ ul.dropdown-menu.course{
     z-index: 4;
     display: table-cell;
 }
-.videoPlayerWrapper{
+
+.videoPlayerWrapper {
     position: fixed;
     top: 0px;
     left: 0px;
     width: 100%;
     height: 100%;
-    background: rgba(0,0,0,0.3);
+    background: rgba(0, 0, 0, 0.3);
     z-index: 3000;
 }
 
-.videoPlayerWrapper .videoPlayerContainer, .center-height{
+.videoPlayerWrapper .videoPlayerContainer, .center-height {
     position: absolute;
     left: 50%;
     top: 50%;
@@ -592,29 +600,32 @@ ul.dropdown-menu.course{
 
 #courses h4.courses-title {
     margin-top: 17px;
-    margin-bottom:20px;
+    margin-bottom: 20px;
 }
-.course-search-box{
+
+.course-search-box {
     position: absolute;
     top: 2px;
     left: 120px;
 }
-.course-search-icon{
+
+.course-search-icon {
     position: absolute;
     top: 20px;
     left: 100px;
 }
 
-a.videoButton{
+a.videoButton {
     position: relative;
     bottom: -50px;
     left: 45%;
-    width:100px;
-    height:100px;
+    width: 100px;
+    height: 100px;
     background: url(../images/playButton.png) no-repeat;
     display: block;
 }
-a.videoButton:hover{
+
+a.videoButton:hover {
     background: url(../images/playButtonHover.png) no-repeat;
 }
 
@@ -627,12 +638,13 @@ a.videoButton:hover{
 .blue {
     background: #3C8DBC !important;
 }
+
 .red {
     background: #446CB3 !important;
 }
 
-.content-header.red>.breadcrumb>li+li:before{
-    color:white;
+.content-header.red > .breadcrumb > li + li:before {
+    color: white;
 }
 
 .action-header {
@@ -719,18 +731,18 @@ a.videoButton:hover{
     box-shadow: 0px 0px 26px -4px rgba(0, 0, 0, 0.87);
 }
 
-.preview-image-container{
-    height:320px;
+.preview-image-container {
+    height: 320px;
     overflow: hidden;
 }
 
-.excerpt .description{
+.excerpt .description {
     max-height: 200px;
     overflow: auto;
-    padding:20px;
+    padding: 20px;
 }
 
-#description.quill-wrapper{
+#description.quill-wrapper {
     height: 150px;
 }
 
@@ -738,67 +750,83 @@ a.videoButton:hover{
     font-size: 27px;
     margin-top: 10px;
 }
-.grid-stack>.grid-stack-item>.grid-stack-item-content{
+
+.grid-stack > .grid-stack-item > .grid-stack-item-content {
     background: white;
-    overflow-y: hidden!important;
+    overflow-y: hidden !important;
 }
-.grid-stack-item-content .box-body{
+
+.grid-stack-item-content .box-body {
     overflow-y: auto;
 }
-.empty-widget{
+
+.empty-widget {
     width: 100%;
     text-align: center;
     min-height: 800px;
 }
+
 a.cursor, .cursor {
     cursor: pointer;
 }
 
-.quill-wrapper{
+.quill-wrapper {
     background-color: #fff;
     border: 1px solid #ccc;
     box-shadow: 0px 0px 5px #ccc;
     /*min-height: 220px;*/
 }
-.ql-toolbar{
+
+.ql-toolbar {
     border-bottom: 1px solid #ccc;
 }
-.ql-container{
+
+.ql-container {
     min-height: 200px;
-    max-height: 400px!important;
+    max-height: 400px !important;
 }
-.ql-text-info{
-    font-size:12px;
+
+.ql-text-info {
+    font-size: 12px;
 }
-.content-header.action-header >.breadcrumb>li>a{
-    color:white;
+
+.content-header.action-header > .breadcrumb > li > a {
+    color: white;
 }
-.action-header .breadcrumb li a{
+
+.action-header .breadcrumb li a {
     font-weight: bold;
 }
-#LinksList .posts-list h4{
+
+#LinksList .posts-list h4 {
     float: left;
 }
+
 .open-new-tab {
     /*float: right;*/
 }
+
 .w:hover > ul,
 .center-course:hover > ul,
-.open{
+.open {
     display: block;
 }
-.course-picture{
+
+.course-picture {
     width: 100%;
 }
 
-li.active .voting .vote-total{
-    padding:4px;
+li.active .voting .vote-total {
+    padding: 4px;
 }
 
 /*
 commenting
 */
-#commentList{margin-top: 20px;}
+#commentList {
+    margin-top: 20px;
+}
+
 .nopadding {
     padding: 0 !important;
     margin: 0 !important;
@@ -806,39 +834,58 @@ commenting
 
 /*
 toastr custom*/
-#toast-container >div.wide{
-    width: 500px!important;
+#toast-container > div.wide {
+    width: 500px !important;
 }
-#toast-container>.toast-info.wide{
+
+#toast-container > .toast-info.wide {
     background-position: 20px 20px;
 }
 
-.draw-tab{
+.draw-tab {
     position: fixed;
     z-index: 1000;
     background: white;
     padding-right: 25px;
-    width:80px!important;
-    left:-100px!important;
+    width: 80px !important;
+    left: -100px !important;
     padding-bottom: 25px;
 }
 
-.draw-tab-show{
-    left:0px!important;
+.draw-tab-show {
+    left: 0px !important;
 }
 
-.draw-tab-show > li{
+.draw-tab-show > li {
     width: 64px;
 }
 
-.draw-tab-button a{
-    color:white;
+.draw-tab-button a {
+    color: white;
     font-weight: bold;
     font-size: 14px;
 }
-.changePage{
+
+.changePage {
     height: 10px;
     background: aliceblue;
     margin-bottom: 30px;
     margin-top: 0px;
+}
+
+.jsplumb-draggable.owned {
+    cursor: move;
+}
+
+.jsplumb-draggable a {
+    cursor: pointer;
+}
+
+.jsplumb-drag-select * {
+    -webkit-touch-callout: none;
+    -webkit-user-select: none;
+    -khtml-user-select: none;
+    -moz-user-select: none;
+    -ms-user-select: none;
+    user-select: none;
 }
