fixed description bug css

--- a/public/admin-lte/css/app.css
+++ b/public/admin-lte/css/app.css
@@ -743,7 +743,8 @@ a.videoButton:hover {
 }
 
 #description.quill-wrapper {
-    height: 150px;
+    min-height: 150px;
+    height:auto;
 }
 
 .preview h1 {
