--- a/public/admin-lte/css/posts.css
+++ b/public/admin-lte/css/posts.css
@@ -1,56 +1,64 @@
-.posts-list ul.posts, ul.replies{
-    list-style-type: none;padding: 0;
+.posts-list ul.posts, ul.replies {
+    list-style-type: none;
+    padding: 0
 }
 
-.posts-list li.post h4, .currentTopic h4 {
+.currentTopic h4, .posts-list li.post h4 {
     font-size: 20px;
-    margin-bottom: 0px;
-    margin-top: 0px;
+    margin-bottom: 0;
+    margin-top: 0
 }
-.currentTopic h4{color: #3c8dbc;}
 
-iframe.link{
-    width:100%;
+.currentTopic h4 {
+    color: #3c8dbc
+}
+
+iframe.link {
+    width: 100%;
     min-height: 640px;
-    overflow: scroll;
+    overflow: scroll
 }
-li.post, li.reply{
-    padding: 15px;
+
+li.post, li.reply {
+    padding: 15px
 }
+
 li.post:hover {
-    /*background: rgba(136, 208, 255, 0.3);*/
-    background: #ecf0f5;
+    background: #ecf0f5
 }
-p.topicContent{
-    padding-left:15px;
+
+p.topicContent {
+    padding-left: 15px
 }
-span.posted-at{
-    padding-top: -10px;
-    font-size: 12px;
+
+span.posted-at {
+    font-size: 12px
 }
-.separator{
+
+.separator {
     width: 50%;
     height: 1px;
     background: #3C8DBC;
-    margin-top:30px;
-    margin-bottom: 30px;
+    margin-top: 30px;
+    margin-bottom: 30px
 }
-.replies-wrapper{
+
+li.post.active {
+    background: #ecf0f5
 }
-#topicContents{
+
+.replyControl {
+    text-align: right
 }
-li.post.active{
-    background: #ecf0f5;
-}
-.replyControl{
-    text-align: right;
-}
+
 .replyControl > div {
-    display: inline;
+    display: inline
 }
-.currentTopic .box{
-    box-shadow: 0px 0px 37px 2px rgba(0,0,0,0.4);
+
+.currentTopic .box {
+    box-shadow: 0 0 37px 2px rgba(0, 0, 0, .4)
 }
-.replies .box{
-    box-shadow: 3px 4px 4px rgba(0,0,0,0.1);
+
+.replies .box {
+    box-shadow: 3px 4px 4px rgba(0, 0, 0, .1)
 }
