--- a/views/admin-lte/catalogs/nodeDetail.ejs
+++ b/views/admin-lte/catalogs/nodeDetail.ejs
@@ -13,12 +13,12 @@
     <!-- breadcrumb 2nd row -->
     <ol class="breadcrumb">
         <li class="home">
-            <a href="#/cid/{{course._id}}?tab=map&center={{nodeId}}"> &leftarrow;Back &nbsp;&nbsp;
+            <a href="/course/{{course.slug}}/#/cid/{{course._id}}?tab=map&center={{nodeId}}"> &leftarrow;Back &nbsp;&nbsp;
                 {{course.name}}
             </a>
         </li>
-        <li><a href="#/cid/{{course._id}}?tab=map&center={{nodeId}}">Map</a></li>
-        <li><a href="#/cid/{{course._id}}/nid/{{nodeId}}?tab={{defaultPath}}">{{treeNode.name}}</a></li>
+        <li><a href="/course/{{course.slug}}/#/cid/{{course._id}}?tab=map&center={{nodeId}}">Map</a></li>
+        <li><a href="/course/{{course.slug}}/#/cid/{{course._id}}/nid/{{nodeId}}?tab={{defaultPath}}">{{treeNode.name}}</a></li>
         <li class="active">{{tabDisplayName}}</li>
     </ol>
     <!-- breadcrumb 2nd row -->
