apply hide top setting

--- a/views/admin-lte/catalogs/courseConfigModal.ejs
+++ b/views/admin-lte/catalogs/courseConfigModal.ejs
@@ -71,26 +71,27 @@
                             </div>
 
                             <br>
-
+                            <% if(isInIframe){ %>
+                            <% } else { %>
                             <div class="control-group">
                                 <label class="control-label" for="description">Embed Settings</label>
 
                                 <div class="form-group">
-                                    <div class="checkbox">
-                                        <%
-                                            var dc = false;
-                                            var dt = false;
-                                            if(course.settings && course.settings['disableControls'] !== undefined){
-                                                dc = course.settings['disableControls'];
-                                            }
-                                            if(course.settings && course.settings['disableTop'] !== undefined){
-                                                dt = course.settings['disableTop'];
-                                            }
-                                          %>
+                                    <%
+                                        var dc = false;
+                                        var dt = false;
+                                        if (course.settings && course.settings['disableControls'] !== undefined) {
+                                            dc = course.settings['disableControls'];
+                                        }
+                                        if (course.settings && course.settings['disableTop'] !== undefined) {
+                                            dt = course.settings['disableTop'];
+                                        }
+                                    %>
+                                    <!--<div class="checkbox">
                                         <label ng-init="settings.disableControls = <%= dc %>">
                                             <input type="checkbox" name="disableControl"
                                                    ng-model="settings.disableControls"> Disable Controls</label>
-                                    </div>
+                                    </div>-->
                                     <div class="checkbox">
                                         <label ng-init="settings.disableTop = <%= dt %>">
                                             <input type="checkbox" name="disableTop" ng-model="settings.disableTop">
@@ -99,6 +100,7 @@
                                     </div>
                                 </div>
                             </div>
+                            <% } %>
 
                             <div class="control-group">
                                 <br class="clear">
