--- a/views/admin-lte/catalogs/nodeDetail.ejs
+++ b/views/admin-lte/catalogs/nodeDetail.ejs
@@ -1,3 +1,5 @@
+<% if(isInIframe && treeNode && treeNode.settings && treeNode.settings['disableTop']){ %>
+<% } else { %>
 <section class="content-header">
     <ol class="breadcrumb">
         <li><a href="/"><i class="fa fa-home"></i> Home</a></li>
@@ -5,7 +7,7 @@
         <li class="active"><a href="#/cid/{{course._id}}?tab=preview">{{course.name}}</a></li>
     </ol>
 </section>
-
+<% } %>
 <section class="content-header action-header red">
     <li class="visible-sm-inline-block visible-xs-inline-block draw-tab-button">
         <a class="cursor" onclick="toggleTabMenu()" style="color: white"><i class="ionicons ion-navicon-round"></i></a>
