--- a/views/admin-lte/mainMenu.ejs
+++ b/views/admin-lte/mainMenu.ejs
@@ -1,3 +1,10 @@
+<% if(
+        (typeof isInIframe != 'undefined' && isInIframe && course && course.settings && course.settings['disableTop']) ||
+        (typeof isInIframe != 'undefined' && isInIframe && treeNode && treeNode.settings && treeNode.settings['disableTop'])
+){ %>
+<div ng-controller="MainMenuController">
+</div>
+<% } else { %>
 <!-- Main Header -->
 <header class="main-header">
     <!-- Logo -->
@@ -39,8 +46,9 @@
 
                 <li class="dropdown user user-menu notifications-menu" ng-show="user" ng-cloak>
                     <a href="" class="dropdown-toggle" data-toggle="dropdown">
-                        <img src="/admin-lte/images/user2-160x160.png" class="user-image" alt="User Image" ng-hide="user.image" ng-cloak />
-                        <img ng-src="{{user.image}}" class="user-image" alt="User Image" ng-show="user.image" ng-cloak />
+                        <img src="/admin-lte/images/user2-160x160.png" class="user-image" alt="User Image"
+                             ng-hide="user.image" ng-cloak/>
+                        <img ng-src="{{user.image}}" class="user-image" alt="User Image" ng-show="user.image" ng-cloak/>
                         <i ng-hide="user" class="fa fa-refresh fa-spin"></i>
                         <span ng-show="user.username && !user.displayName" class="hidden-xs">{{user.username | capitalize:true}}</span>
                         <span ng-show="user.displayName" class="hidden-xs">{{user.displayName | capitalize:true}}</span>
@@ -63,20 +71,7 @@
                 </li>
             </ul>
         </div>
-
-
-        <div class="col-xs-12 col-sm-3 col-md-3 col-lg-3 hidden-xs">
-            <!--<form class="navbar-form" role="search">
-                <div class="input-group">
-                    <input type="text" class="form-control" placeholder="Search" name="q">
-
-                    <div class="input-group-btn">
-                        <button class="btn btn-default" type="submit"><i class="glyphicon glyphicon-search"></i>
-                        </button>
-                    </div>
-                </div>
-            </form>-->
-        </div>
     </nav>
 
 </header>
+<% } %>
