fix undefined error when in iframe and course with setting disabled

--- a/views/admin-lte/catalogs/nodeConfigModal.ejs
+++ b/views/admin-lte/catalogs/nodeConfigModal.ejs
@@ -61,11 +61,11 @@
                                             dt = treeNode.settings['disableTop'];
                                         }
                                     %>
-                                    <div class="checkbox">
+                                    <!--<div class="checkbox">
                                         <label ng-init="settings.disableControls = <%= dc %>">
                                             <input type="checkbox" name="disableControl"
                                                    ng-model="settings.disableControls"> Disable Controls</label>
-                                    </div>
+                                    </div>-->
                                     <div class="checkbox">
                                         <label ng-init="settings.disableTop = <%= dt %>">
                                             <input type="checkbox" name="disableTop" ng-model="settings.disableTop">
