--- a/views/admin-lte/catalogs/nodeDetail.ejs
+++ b/views/admin-lte/catalogs/nodeDetail.ejs
@@ -14,13 +14,18 @@
     </li>
     <!-- breadcrumb 2nd row -->
     <ol class="breadcrumb">
+        <% if(isInIframe && treeNode && treeNode.settings && treeNode.settings['disableTop']){ %>
+        <% } else { %>
         <li class="home">
             <a href="/course/{{course.slug}}/#/cid/{{course._id}}?tab=map&center={{nodeId}}"> &leftarrow;Back &nbsp;&nbsp;
                 {{course.name}}
             </a>
         </li>
         <li><a href="/course/{{course.slug}}/#/cid/{{course._id}}?tab=map&center={{nodeId}}">Map</a></li>
-        <li><a href="/course/{{course.slug}}/#/cid/{{course._id}}/nid/{{nodeId}}?tab={{defaultPath}}">{{treeNode.name}}</a></li>
+        <% } %>
+        <li>
+            <a href="/course/{{course.slug}}/#/cid/{{course._id}}/nid/{{nodeId}}?tab={{defaultPath}}">{{treeNode.name}}</a>
+        </li>
         <li class="active">{{tabDisplayName}}</li>
     </ol>
     <!-- breadcrumb 2nd row -->
