--- a/views/admin-lte/catalogs/editCourseModal.ejs
+++ b/views/admin-lte/catalogs/editCourseModal.ejs
@@ -78,7 +78,7 @@
                                         </p>
 
                                         <div class="btn btn-sm btn-default"
-                                             ngf-select accept="image/*" ngf-accept="'image/jpg,image/jpeg,image/png'"
+                                             ngf-select accept="image/*"
                                              ng-model="filespicture" ngf-multiple="false" ngf-max-size='1000000'><i
                                                     class="ionicons ion-image"></i> &nbsp; Select a picture
                                         </div>
@@ -107,7 +107,7 @@
                                         </p>
 
                                         <div class="btn btn-sm btn-default"
-                                             ngf-select accept="video/*" ngf-accept="'video/*'"
+                                             ngf-select accept="video/mp4,video/x-m4v,video/*"
                                              ng-model="filesvideo" ngf-multiple="false" ngf-max-size='100000000'><i
                                                     class="`"></i> &nbsp; Select a video file
                                         </div>
