--- a/views/admin-lte/course/map/editContentNodeModal.ejs
+++ b/views/admin-lte/course/map/editContentNodeModal.ejs
@@ -8,7 +8,7 @@
 
                     <div class="box-tools pull-right">
                         <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span
-                                aria-hidden="true">&times;</span></button>
+                                    aria-hidden="true">&times;</span></button>
                     </div>
                 </div>
 
@@ -27,7 +27,7 @@
                                     <input type="text" id="name" name="name" placeholder="" class="form-control"
                                            ng-model="currentEditNode.name"
                                            required ng-required="true"
-                                            >
+                                    >
 
                                     <p ng-show="editContentNodeForm.name.$invalid && !editContentNodeForm.$pristine"
                                        class="help-block">Content Node Name is required.</p>
@@ -61,16 +61,16 @@
                                                     please remove it if you want to upload from local drive.
                                                 </div>
                                                 <div class="btn btn-sm btn-default"
-                                                     ngf-select accept="application/pdf" ngf-accept="'application/pdf'"
+                                                     ngf-select accept="application/pdf"
                                                      ng-model="filespdf" ngf-multiple="false" ngf-max-size='50000000'
                                                      ng-hide="pdfHostLink.trim()!=''">
                                                     <i class="fa fa-file-pdf-o"> </i>
                                                     &nbsp; Select a pdf file (Max 24MB)
                                                 </div>
                                                 <br>
-                                                <span ng-repeat="f in filespdf">
+                                                <span ng-show="filespdf">
                                                     <div class="label label-info ">
-                                                        {{f.name}}
+                                                        {{filespdf.name}}
                                                         <a ng-click="clearPdf()">
                                                             <i class="fa fa-close"></i>
                                                         </a>
@@ -79,7 +79,7 @@
                                             </div>
                                         </div>
                                         <div id="upload-pdf-link" class="tab-pane fade in">
-                                            <div ng-hide="filespdf.length > 0">
+                                            <div ng-hide="filespdf">
                                                 <br>
 
                                                 <div class="input-group">
@@ -92,7 +92,7 @@
                                                       ng-show="editContentNodeForm.pdfHostLink.$error.url">
                                                     Not a valid url!</span>
                                             </div>
-                                            <div ng-show="filespdf.length > 0">
+                                            <div ng-show="filespdf">
                                                 <br>
                                                 You have added a pdf, please remove it if you want to use an external
                                                 link
@@ -138,17 +138,18 @@
 
                                             <div class="controls">
                                                 <div class="btn btn-sm btn-default"
-                                                     ngf-select accept="video/*" ngf-accept="'video/*'"
+                                                     ngf-select accept="video/mp4,video/x-m4v,video/*"
                                                      ng-model="filesvideo" ngf-multiple="false"
                                                      ngf-max-size='100000000'>
                                                     <i class="fa fa-file-video-o"></i>
                                                     &nbsp; Select a video file (Max 75MB)
                                                 </div>
                                                 <br>
-                                                <span ng-repeat="f in filesvideo">
+                                                <span ng-show="filesvideo">
                                                 <div class="label label-info ">
-                                                    {{f.name}}
-                                                    <a ng-click="clearVideo()" class="cursor"> <i class="fa fa-close"></i> </a>
+                                                    {{filesvideo.name}}
+                                                    <a ng-click="clearVideo()" class="cursor"> <i
+                                                                class="fa fa-close"></i> </a>
                                                 </div>
                                                 </span>
                                             </div>
@@ -157,19 +158,22 @@
                                     </div>
 
                                     <div id="upload-link-edit" class="tab-pane fade">
-                                        <div ng-hide="filesvideo.length > 0">
+                                        <div ng-hide="filesvideo">
                                             <br>
                                             <div class="input-group">
                                                 <span class="input-group-addon"><i class="fa fa-chain"></i></span>
-                                                <input type="url" class="form-control" placeholder="http://youtube.com/" ng-model="videoHostLink">
+                                                <input type="url" class="form-control" placeholder="http://youtube.com/"
+                                                       ng-model="videoHostLink">
                                             </div>
 
-                                                <span class="error" ng-show="editContentNodeForm.videoHostLink.$error.url">
+                                                <span class="error"
+                                                      ng-show="editContentNodeForm.videoHostLink.$error.url">
                                                     Not a valid url!</span>
                                         </div>
-                                        <div ng-show="filesvideo.length > 0">
+                                        <div ng-show="filesvideo">
                                             <br>
-                                            You have added a file video, please remove it if you want to use an external link
+                                            You have added a file video, please remove it if you want to use an external
+                                            link
                                         </div>
                                     </div>
                                 </div>
