--- a/views/admin-lte/cm-admin/mainMenu.ejs
+++ b/views/admin-lte/cm-admin/mainMenu.ejs
@@ -57,7 +57,7 @@
                         </a>
                     </li>
 
-                    <li class="dropdown user user-menu notifications-menu ng-hide" ng-show="user">
+                    <li class="dropdown user user-menu notifications-menu ng-hide" ng-cloak ng-show="user">
                         <a href="" class="dropdown-toggle" data-toggle="dropdown">
                             <img src="/admin-lte/images/user2-160x160.png" class="user-image" alt="User Image"/>
                             <i ng-hide="user" class="fa fa-refresh fa-spin"></i>
