--- a/views/admin-lte/course/map/map.ejs
+++ b/views/admin-lte/course/map/map.ejs
@@ -10,6 +10,13 @@
             </i>
         </span>
 
+        <div class="collapse-button" ng-show="data.type == 'subTopic'">
+            <a class="pointer" ng-click="collapse('t' + data._id )">
+                <i class="fa fa-minus-square" ng-show="!collapseStatus[data._id]"></i>
+                <i class="fa fa-plus-square" ng-show="collapseStatus[data._id]"></i>
+            </a>
+        </div>
+
         <a ng-show="data.type == 'contentNode' && !data.isDeleted"
            ng-href="{{getContentNodeLink(data)}}"> {{data.name}} </a>
 
@@ -203,8 +210,8 @@
     var Canvas = {
         el: null,
         draggable: null,
-        w: 2000,
-        h: 2000,
+        w: 4000,
+        h: 4000,
         centerCss: {},
 
         init: function (wWidth, wHeight) {
