--- a/views/admin-lte/treeNode/links/links.ejs
+++ b/views/admin-lte/treeNode/links/links.ejs
@@ -28,13 +28,18 @@
                                 <voting vote-type="link" vote-type-id="{{bookmark._id}}" vote-value=""></voting>
                             </div>
                             <div class="col-xs-11">
-                                <h4> {{bookmark.title}} </h4>
-
+                                <a title="Open in a New Tab"
+                                   href="{{bookmark.content}}" target="_blank"><h4> {{bookmark.title}} </h4>
+                                </a>
                                 <br class="clear">
                                 <br class="clear">
-                                <a class="btn btn-primary btn-xs open-new-tab" title="Open in a New Tab"
+                                <p class="description">
+                                    {{bookmark.description}}
+                                </p>
+                                <a class="" title="Open in a New Tab"
                                    href="{{bookmark.content}}" target="_blank">
-                                    <i class="fa fa-external-link"></i> Open in a new tab</a> {{bookmark.content}}
+                                    <i class="fa fa-external-link"></i>
+                                    {{bookmark.content}}</a>
                                 <br class="clear">
 
                                 <span class="posted-at">
