add horizontal mode on vote

--- a/public/admin-lte/css/app.css
+++ b/public/admin-lte/css/app.css
@@ -698,8 +698,13 @@ a.videoButton:hover {
 }
 
 #description.quill-wrapper {
-    min-height: 150px;
+    min-height: 300px;
     height: auto
+}
+
+#description .ql-container {
+    min-height: 300px;
+    max-height: none !important
 }
 
 .preview h1 {
