youtube input box is not hidden

--- a/views/admin-lte/course/map/addContentNodeModal.ejs
+++ b/views/admin-lte/course/map/addContentNodeModal.ejs
@@ -146,7 +146,7 @@
                                             </div>
                                         </div>
                                         <div id="upload-link" class="tab-pane fade">
-                                            <div ng-hide="!filesvideo">
+                                            <div ng-hide="filesvideo">
                                                 <br>
                                                 <div class="input-group">
                                                     <span class="input-group-addon"><i class="fa fa-chain"></i></span>
